--- a/01-interface/package.json
+++ b/01-interface/package.json
@@ -20,6 +20,7 @@
     "@tabler/core": "^1.4.0",
     "@tanstack/react-table": "^8.21.3",
     "add": "^2.0.6",
+    "axios": "^1.13.2",
     "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
