added logout guard

--- a/01-interface/tsconfig.json
+++ b/01-interface/tsconfig.json
@@ -21,7 +21,8 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@/utils/*": ["app/utils/*"]
+      "@/utils/*": ["app/utils/*"],
+      "@/hooks/*": ["hooks/*"]
     }
   },
   "include": [
